--- a/content/notes/Codedojo/attachments/Excali Test 2023-01-07 00.37.23.excalidraw.md
+++ b/content/notes/Codedojo/attachments/Excali Test 2023-01-07 00.37.23.excalidraw.md
@@ -8,7 +8,7 @@ tags: [excalidraw]
 
 
 # Text Elements
-Fuack ^og1u7OlM
+NANI? ^pQVD7Arm
 
 %%
 # Drawing
@@ -19,12 +19,12 @@ Fuack ^og1u7OlM
 	"source": "https://excalidraw.com",
 	"elements": [
 		{
-			"id": "FWKsETCT82gFV9DDN0Lxq",
+			"id": "vLR_92PbMBPEvIdn7ZKmF",
 			"type": "rectangle",
-			"x": -151.5,
-			"y": -197.984375,
-			"width": 304,
-			"height": 281,
+			"x": -104.5,
+			"y": -198.984375,
+			"width": 212,
+			"height": 313,
 			"angle": 0,
 			"strokeColor": "#000000",
 			"backgroundColor": "transparent",
@@ -37,22 +37,27 @@ Fuack ^og1u7OlM
 			"roundness": {
 				"type": 3
 			},
-			"seed": 2059288448,
-			"version": 166,
-			"versionNonce": 1080178816,
+			"seed": 917928124,
+			"version": 15,
+			"versionNonce": 335756548,
 			"isDeleted": false,
-			"boundElements": null,
-			"updated": 1673033480517,
+			"boundElements": [
+				{
+					"type": "text",
+					"id": "pQVD7Arm"
+				}
+			],
+			"updated": 1673033848181,
 			"link": null,
 			"locked": false
 		},
 		{
-			"id": "og1u7OlM",
+			"id": "pQVD7Arm",
 			"type": "text",
-			"x": -56.5,
-			"y": -87.984375,
-			"width": 113.99999999999997,
-			"height": 50,
+			"x": -28.5,
+			"y": -54.984375,
+			"width": 60,
+			"height": 25,
 			"angle": 0,
 			"strokeColor": "#000000",
 			"backgroundColor": "transparent",
@@ -63,23 +68,23 @@ Fuack ^og1u7OlM
 			"opacity": 100,
 			"groupIds": [],
 			"roundness": null,
-			"seed": 408653696,
-			"version": 72,
-			"versionNonce": 942403456,
+			"seed": 778370236,
+			"version": 6,
+			"versionNonce": 378725948,
 			"isDeleted": false,
 			"boundElements": null,
-			"updated": 1673033492372,
+			"updated": 1673033850770,
 			"link": null,
 			"locked": false,
-			"text": "Fuack",
-			"rawText": "Fuack",
-			"fontSize": 40.00000000000001,
+			"text": "NANI?",
+			"rawText": "NANI?",
+			"fontSize": 20,
 			"fontFamily": 1,
-			"textAlign": "left",
-			"verticalAlign": "top",
-			"baseline": 35,
-			"containerId": null,
-			"originalText": "Fuack"
+			"textAlign": "center",
+			"verticalAlign": "middle",
+			"baseline": 18,
+			"containerId": "vLR_92PbMBPEvIdn7ZKmF",
+			"originalText": "NANI?"
 		}
 	],
 	"appState": {
