Progress on NewTab Project

--- a/content/notes/5.Resources/001. Resources.md
+++ b/content/notes/5.Resources/001. Resources.md
@@ -1,4 +1,8 @@
 ## Front-end Matter
 - [BGJar](https://bgjar.com/)
-	- Generate Backgrounds!
+	- Generate Backgrounds
+- [CSSPortal](https://www.cssportal.com/)
+
+## React
+- [React_Icons](https://react-icons.github.io/react-icons/)
 
