--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -1,4 +1,12 @@
-
+---
+title: "Minimize the Maximum Difference of pairs"
+description: "A leet code question about array and binary search"
+tags: 
+- codewars
+- array
+- binary_search
+- problem_solving
+---
 > [!question] 
 > You are given a **0 indexed** integer array `nums` and an integer `p`. Find `p` pairs of indices of `nums` such that the **maximum** difference amongst all the pairs is **minimized**. Also, ensure no index appears more than once amongst the `p` pairs.
 > Note that for a pair of elements at the index `i` and `j`, The difference of this pair is `|nums[i] - nums[j]|`, where `|x|` represents the **absolute value** of 'x'. 
@@ -23,29 +31,3 @@ here the pairs can be
 Maximum value of which is 1
 
 ## Process:
-The best way to solve this (from what I can think of is) by picking a value from the array and finding the smallest difference it can make with another number, and popping it out. The remaining elements will go through the same thing and the resulting pair of differences will be arranged in ascending order which can be picked for pth value
-
-```
-nums = [10,1,2,7,1,3]
-After sort
-[ 1, 1, 2, 3, 7, 10 ]
-MinDiff(nums[0]) = 0
-MinDiff(nums[1]) = 1
-MinDiff(nums[2]) = 3
-
-Take these values into an array -> Sort in ascending -> arr[p-1]
-
-nums = [4,2,1,2]
-Aftert Sort
-[ 1, 2, 2, 4 ]
-MinDiff(nums[0]) = 1
-MinDiff(nums[1]) = 0
-MinDiff(nums[2]) = 1
-```
-
-```js
-let nums = [10,1,2,7,1,3]
-console.log(nums.sort((a,b)=>{return a-b}))
-let nums2 = [4,2,1,2]
-console.log(nums2.sort((a,b)=>{return a-b}))
-```
