Discussed about binary search

--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -31,3 +31,4 @@ here the pairs can be
 Maximum value of which is 1
 
 ## Process:
+So apparently we need to use Binary search and greedy method... WTF ? Let's see!
