Making the algorithm for minmizing the max pairs

--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -31,4 +31,20 @@ here the pairs can be
 Maximum value of which is 1
 
 ## Process:
-So apparently we need to use Binary search and greedy method... WTF ? Let's see!
+Let's first sort the array
+- Sort(nums) -- Ascending order
+After that we need two numbers from this let's call them nums\[i] and nums\[j] where these numbers must be the lowest Objective Function
+But what is the objective function is ?
+
+If the array is `nums = [1,1,2,3,7,10]`
+
+What needs to be kept in mind is that
+`max(pair1, pair2, pair3 . . .pairN)` has to have pair that will have least values !
+The way finding that minimum maximum would be possible 
+Let's assume the minimum to be `x`
+After which we check if there are that many pairs or more with the same or less difference than x
+- `nums = [a,b,c,d,e,f]`
+- ` no_of_pairs_with_diff <= x ? `
+	- If `no_of_pairs_with_diff >= p` Then we still haven't found the minimum 
+- ![](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.svg)
+%%[🖋 Edit in Excalidraw](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.md), and the [dark exported image](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.dark.svg)%%
