--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -46,5 +46,6 @@ After which we check if there are that many pairs or more with the same or less 
 - `nums = [a,b,c,d,e,f]`
 - ` no_of_pairs_with_diff <= x ? `
 	- If `no_of_pairs_with_diff >= p` Then we still haven't found the minimum 
-- ![](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.svg)
+
+![](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.svg)
 %%[🖋 Edit in Excalidraw](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.md), and the [dark exported image](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.dark.svg)%%
