--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -49,3 +49,46 @@ After which we check if there are that many pairs or more with the same or less 
 
 ![](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.svg)
 %%[🖋 Edit in Excalidraw](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.md), and the [dark exported image](notes/2.CodeQ/Medium/attachments/2616.%20Minimize%20the%20Maximum%20Difference%20of%20pairs%202023-08-14%2002.03.48.excalidraw.dark.svg)%%
+
+### Algorithm
+- Sort nums in Ascending Order
+	- Find floor mid difference of the array
+- Make [[notes/1.General/binary_search|binary_search]]:
+	- Left = 0, Right = nums\[first] - nums\[last]
+	- Make Loop while Left < Right
+		- If (no_Of_Pair with (diff <= mid) ) < p
+			- left = mid + 1
+		- else 
+			- right = mid
+	- return Left
+
+### Code In JS
+```js
+var minimizeMax = function(nums, p) {
+        nums.sort((a,b)=>{return a - b})
+    let left = 0
+    let right = nums[nums.length - 1] - nums [0]
+    while (left < right){
+        mid = Math.floor((left + right)/2)
+        if (canPair(mid, nums) < p){
+            left = mid  + 1
+        } else {
+            right = mid
+        }
+    }; return left
+};
+
+function canPair(mid, nums){
+    let count = 0
+    for (let i = 0; i <= nums.length - 1;){
+            let diff = nums[i+1] - nums[i]
+            if (diff <= mid){
+                count++
+                i += 2
+            } else {
+                i++
+            }
+    }
+    return count
+}
+```
