Learning about linked list

--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -53,7 +53,7 @@ After which we check if there are that many pairs or more with the same or less 
 ### Algorithm
 - Sort nums in Ascending Order
 	- Find floor mid difference of the array
-- Make [[notes/1.General/binary_search|binary_search]]:
+- Make [[notes/1.General/Algorithms/binary_search|binary_search]]:
 	- Left = 0, Right = nums\[first] - nums\[last]
 	- Make Loop while Left < Right
 		- If (no_Of_Pair with (diff <= mid) ) < p
