Learned about linked lists

--- a/content/notes/2.CodeQ/Hard/239. Sliding Window Maximum.md
+++ b/content/notes/2.CodeQ/Hard/239. Sliding Window Maximum.md
@@ -2,11 +2,12 @@
 title: "Sliding Window Maximum"
 description: "The leetcode problem of finding the maximum for a sliding window"
 tags:
-- code_wars
+- codewars
 - algorithm
 - hard
 - heap
 - deque
+- js
 ---
 
 You are given an array of integers `nums`, there is a sliding window of size `k` which is moving from the very left of the array to the very right. You can only see the `k` numbers in the window. Each time the sliding window moves right by one position.
