--- a/content/notes/2.CodeQ/Medium/215. Kth Largest Element in an Array.md
+++ b/content/notes/2.CodeQ/Medium/215. Kth Largest Element in an Array.md
@@ -1,3 +1,13 @@
+---
+title: "Kth Largest Element in an array"
+description: "The leetcode problem of the kth largest element in an array"
+date: "2023-08-15"
+tags:
+- codewars
+- medium
+- quickSelect
+- js
+---
 Given an integer array nums and an integer `k`, return the `kth` largest element in the array.
 Note that it is the `kth` largest element in the sorted order, not the `kth` distinct element.
 Can you solve it without sorting?
