--- a/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
+++ b/content/notes/2.CodeQ/Medium/2616. Minimize the Maximum Difference of pairs.md
@@ -1,11 +1,13 @@
 ---
 title: "Minimize the Maximum Difference of pairs"
 description: "A leet code question about array and binary search"
+date: "2023-08-13"
 tags: 
 - codewars
 - array
 - binary_search
 - problem_solving
+- js
 ---
 > [!question] 
 > You are given a **0 indexed** integer array `nums` and an integer `p`. Find `p` pairs of indices of `nums` such that the **maximum** difference amongst all the pairs is **minimized**. Also, ensure no index appears more than once amongst the `p` pairs.
