--- a/content/notes/2.CodeQ/Hard/239. Sliding Window Maximum.md
+++ b/content/notes/2.CodeQ/Hard/239. Sliding Window Maximum.md
@@ -47,6 +47,25 @@ Window position                Max
 	- push\[0] into the max array
 - i++; j++
 
+```js
+let nums = [1,3,-1,-3,5,3,6,7]
+function window(nums, k){
+    let j = k
+    let i = 0
+    let max = []
+    while (j <= nums.length){
+        let section = nums.slice(i, j)
+        section.sort((a,b)=>{return b-a})
+        max.push(section[0])
+        i++
+        j++
+    }
+    return max
+}
+
+console.log(window(nums, 3))
+```
+
 This shit is hella slow for larger arrays, So organizing for larger arrays is not really possilbe
 ### Time Complexity
 The time complexity of the given function can be analyzed step by step:
