--- a/content/notes/2.CodeQ/Medium/215. Kth Largest Element in an Array.md
+++ b/content/notes/2.CodeQ/Medium/215. Kth Largest Element in an Array.md
@@ -50,4 +50,4 @@ console.log("🚀 ~ file: Array Prototype Last.js:48 ~ kthLarge(nums , 4):", kth
 ```
 
 Now how to make this without actually sorting ?
-## QuickSelect !
+## [[QuickSelect]] !
