Edited and added things in BCS - Karachi 02

--- a/content/notes/2.CodeQ/Medium/79. Word Search.md
+++ b/content/notes/2.CodeQ/Medium/79. Word Search.md
@@ -147,3 +147,5 @@ private:
 5. Simplified the `exist` function to start the search from all possible positions and return `true` if the word is found.
 
 This should work as expected to find a word in the 2D grid using backtracking.
+
+The way we use DFS is by going in depth first to figure out if xyz  is true or false meaning it is run recursively until all the instances of the stack function are found to be true, when this happens the chain leading up to that point all trigger to be true giving the correct answer as either valid or invalid. And in order to prevent backtracking we change the instance of that position in the array to be  something other than a movable pattern
